feat: get list by location

--- a/index.html
+++ b/index.html
@@ -1,10 +1,39 @@
 <!doctype html>
-<html lang="en">
+<html lang="vi">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/src/assets/la-co-viet-nam.png" />
+    <link rel="apple-touch-icon" href="/src/assets/la-co-viet-nam.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>relief-map-app</title>
+
+    <!-- Primary Meta Tags -->
+    <title>Cả Nước Hướng Về Miền Trung - Người Dân Cả Nước Hướng Về Vùng Lũ</title>
+    <meta name="title" content="Cả Nước Hướng Về Miền Trung - Người Dân Cả Nước Hướng Về Vùng Lũ" />
+    <meta name="description" content="Nền tảng kết nối hỗ trợ người dân miền Trung sau thiên tai. Theo dõi điểm cứu trợ, đóng góp và chia sẻ thông tin hỗ trợ đồng bào miền Trung vượt qua khó khăn." />
+    <meta name="keywords" content="cứu trợ miền trung, hỗ trợ miền trung, từ thiện, thiên tai, lũ lụt, bão lũ, đóng góp, điểm cứu trợ, người dân miền trung" />
+    <meta name="author" content="Cả Nước Hướng Về Miền Trung" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://diemcuutro.org/" />
+    <meta property="og:title" content="Cả Nước Hướng Về Miền Trung - Người Dân Cả Nước Hướng Về Vùng Lũ" />
+    <meta property="og:description" content="Nền tảng kết nối hỗ trợ người dân miền Trung sau thiên tai. Theo dõi điểm cứu trợ, đóng góp và chia sẻ thông tin hỗ trợ đồng bào miền Trung vượt qua khó khăn." />
+    <meta property="og:image" content="/src/assets/banner-ca-nuoc-huong-ve-mien-trung.jpg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:locale" content="vi_VN" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://diemcuutro.org/" />
+    <meta property="twitter:title" content="Cả Nước Hướng Về Miền Trung - Người Dân Cả Nước Hướng Về Vùng Lũ" />
+    <meta property="twitter:description" content="Nền tảng kết nối hỗ trợ người dân miền Trung sau thiên tai. Theo dõi điểm cứu trợ, đóng góp và chia sẻ thông tin hỗ trợ đồng bào miền Trung vượt qua khó khăn." />
+    <meta property="twitter:image" content="/src/assets/banner-ca-nuoc-huong-ve-mien-trung.jpg" />
+
+    <!-- Additional Meta Tags -->
+    <meta name="theme-color" content="#8B4513" />
+    <link rel="canonical" href="https://diemcuutro.org/" />
   </head>
   <body>
     <div id="root"></div>
